<resources>
    <string name="app_name">Encryption MP6</string>
    <string name="input">Input</string>
    <string name="encrypt">Encrypt</string>
    <string name="output">Output</string>
    <string name="make_text_uppercase">Make Text Uppercase Before Rotation</string>
    <string name="currently_off">Currently off</string>
    <string name="currently_on">Currently on</string>
    <string name="settings">Settings</string>
    <string name="go_to_main_screen">Go To Main Screen</string>
    <string name="append_string_to_word">Append String to Word</string>
    <string name="string">String:</string>
    <string name="what_will_be_appended">What will be appended</string>
    <string name="what_to_append">What to append?</string>
    <string name="word">Word:</string>
    <string name="after_which_word">After which word?</string>
    <string name="toggle_appending_string_to_word">Toggle Appending String To Word</string>
    <string name="encrypt_input_with_simple_cipher">Encrypt Input With Simple Cipher</string>
    <string name="how_much_to_rotate_text_1024_to_1024">How much to rotate text (-1024 to 1024)?</string>
    <string name="decrypt">Decrypt</string>
    <string name="get_example_text">get example text</string>
    <string name="leave_some_characters_unchanged">Leave characters unchanged (may scramble results)</string>
    <string name="which_characters_should_be_left_unchanged">Which characters should be left unchanged?</string>
</resources>
